--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -14,7 +14,6 @@ ceilometer::debug: *debug
 glance::api::debug: *debug
 glance::registry::debug: *debug
 ironic::debug: *debug
-ironic::inspector::debug: *debug
 ironic::logging::debug: *debug
 nova::debug: *debug
 neutron::debug: *debug
@@ -30,7 +29,6 @@ ceilometer::verbose: *verbose
 glance::api::verbose: *verbose
 glance::registry::verbose: *verbose
 ironic::verbose: *verbose
-ironic::inspector::verbose: *verbose
 ironic::logging::verbose: *verbose
 nova::verbose: *verbose
 neutron::agents::l3::verbose: *debug
@@ -60,6 +58,8 @@ ceilometer::keystone::auth::password: *service_user_pass
 ceilometer::api::keystone_password: *service_user_pass
 swift::keystone::auth::password: *service_user_pass
 swift::proxy::authtoken::admin_password: *service_user_pass
+ironic::keystone::auth::password: *service_user_pass
+ironic::api::admin_password: *service_user_pass
 nova::keystone::auth::password: *service_user_pass
 neutron::keystone::auth::password: *service_user_pass
 nova::api::admin_password: *service_user_pass
@@ -86,6 +86,10 @@ ceilometer::db::database_connection: "mysql://%{hiera('ceilometer::db::mysql::us
 ceilometer::db::mysql::password: "db_pass"
 ceilometer::db::mysql::user: "ceilometer"
 ceilometer::db::mysql::allowed_hosts: *control_node
+ironic::db::database_connection: "mysql://%{hiera('ironic::db::mysql::user')}:%{hiera('ironic::db::mysql::password')}@%{hiera('control_node')}/ironic"
+ironic::db::mysql::password: "db_pass"
+ironic::db::mysql::user: "ironic"
+ironic::db::mysql::allowed_hosts: *control_node
 nova::db::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hiera('nova::db::mysql::password')}@%{hiera('control_node')}/nova"
 nova::db::mysql::password: "db_pass"
 nova::db::mysql::user: "nova"
@@ -95,9 +99,11 @@ neutron::db::mysql::password: "db_pass"
 neutron::db::mysql::user: "neutron"
 neutron::db::mysql::allowed_hosts: *control_node
 
-# Sync DB: should be true
+# Sync DB: should be true, don't change this
 sync_db: &sync_db true
 cinder::api::sync_db: *sync_db
+ceilometer::db::sync_db: *sync_db
+ironic::sync_db: *sync_db
 nova::api::sync_db: *sync_db
 neutron::server::sync_db: *sync_db
 keystone::sync_db: *sync_db
@@ -121,7 +127,6 @@ ironic::package_ensure: *package_ensure
 ironic::api::package_ensure: *package_ensure
 ironic::client::package_ensure: *package_ensure
 ironic::conductor::package_ensure: *package_ensure
-ironic::inspector::package_ensure: *package_ensure
 nova::client::ensure: *package_ensure
 nova::ensure_package: *package_ensure
 nova::cert::ensure_package: *package_ensure
@@ -151,6 +156,9 @@ keystone::endpoint::admin_url: *admin_endpoint
 glance::keystone::auth::public_url: &glance_url "http://%{hiera('control_node')}:9292"
 glance::keystone::auth::internal_url: *glance_url
 glance::keystone::auth::admin_url: *glance_url
+ironic::keystone::auth::public_url: &ironic_url "http://%{hiera('control_node')}:6385"
+ironic::keystone::auth::internal_url: *ironic_url
+ironic::keystone::auth::admin_url: *ironic_url
 cinder::keystone::auth::public_url: &cinder_api_url "http://%{hiera('control_node')}:8776/v1/%(tenant_id)s"
 cinder::keystone::auth::internal_url: *cinder_api_url
 cinder::keystone::auth::admin_url: *cinder_api_url
@@ -226,6 +234,9 @@ ceilometer::rabbit_userid: *rabbit_user
 cinder::rabbit_host: *rabbit_host
 cinder::rabbit_password: *rabbit_password
 cinder::rabbit_userid: *rabbit_user
+ironic::rabbit_host: *rabbit_host
+ironic::rabbit_password: *rabbit_password
+ironic::rabbit_userid: *rabbit_user
 nova::rabbit_password: *rabbit_password
 nova::rabbitmq::password: *rabbit_password
 nova::rabbit_host: *rabbit_host
@@ -343,6 +354,10 @@ swift_ring_account_devices:
   '127.0.0.1:6002/2':
     'zone': 1
     'weight': 1
+
+# Ironic stuff
+ironic::enable_drivers:
+  - 'pxe_ssh'
 
 # test user & openrc stuff
 deployments::profile::users::project: "test_project"
