--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -149,10 +149,10 @@ swift::storage::account::package_ensure: *package_ensure
 swift::proxy::package_ensure: *package_ensure
 
 # Endpoint stuff
-keystone::public_endpoint: &public_endpoint "http://%{hiera('control_node')}:5000"
-keystone::admin_endpoint: &admin_endpoint "http://%{hiera('control_node')}:35357"
-keystone::endpoint::public_url: *public_endpoint
-keystone::endpoint::admin_url: *admin_endpoint
+keystone::public_endpoint: &keystone_public_endpoint "http://%{hiera('control_node')}:5000"
+keystone::admin_endpoint: &keystone_admin_endpoint "http://%{hiera('control_node')}:35357"
+keystone::endpoint::public_url: *keystone_public_endpoint
+keystone::endpoint::admin_url: *keystone_admin_endpoint
 # Keystone v3 uses versionless endpoints
 keystone::endpoint::version: ''
 glance::keystone::auth::public_url: &glance_url "http://%{hiera('control_node')}:9292"
@@ -180,30 +180,34 @@ nova::keystone::auth::admin_url_v3: *nova_api_url
 swift::keystone::auth::public_url: &swift_api_url "http://%{hiera('control_node')}:8080/v1/%{hiera('swift::proxy::keystone::reseller_prefix')}%(tenant_id)s"
 swift::keystone::auth::internal_url: *swift_api_url
 swift::keystone::auth::admin_url: "http://%{hiera('control_node')}:8080/v1"
-nova::api::auth_uri: &auth_uri "http://%{hiera('control_node')}:5000"
-nova::api::identity_uri: &identity_uri "http://%{hiera('control_node')}:35357"
-neutron::api::auth_uri: *auth_uri
-neutron::api::identity_uri: *identity_uri
-neutron::server::auth_uri: *auth_uri
-neutron::server::identity_uri: *identity_uri
-neutron::server::notifications::auth_uri: *auth_uri
-neutron::server::notifications::identity_uri: *identity_uri
 neutron::keystone::auth::public_url: &neutron_api_url "http://%{hiera('control_node')}:9696"
 neutron::keystone::auth::internal_url: *neutron_api_url
 neutron::keystone::auth::admin_url: *neutron_api_url
-ceilometer::api::keystone_auth_uri: *auth_uri
-ceilometer::api::keystone_identity_uri: *identity_uri
-cinder::api::auth_uri: *auth_uri
-cinder::api::identity_uri: *identity_uri
-glance::api::auth_uri: *auth_uri
-glance::api::identity_uri: *identity_uri
-glance::registry::auth_uri: *auth_uri
-glance::registry::identity_uri: *identity_uri
-ironic::api::auth_uri: *auth_uri
-ironic::api::identity_uri: *identity_uri
-neutron::server::identity_uri: *identity_uri
-swift::proxy::authtoken::auth_uri: *auth_uri
-swift::proxy::authtoken::identity_uri: *identity_uri
+
+# Auth_uri = Public_Uri = port 5000
+# Identity_uri = Admin_Uri = port 35357
+nova::api::auth_uri: *keystone_public_endpoint
+nova::api::identity_uri: *keystone_admin_endpoint
+nova::network::neutron::neutron_admin_auth_url: *keystone_admin_endpoint
+neutron::api::auth_uri: *keystone_public_endpoint
+neutron::api::identity_uri: *keystone_admin_endpoint
+neutron::server::auth_uri: *keystone_public_endpoint
+neutron::server::identity_uri: *keystone_admin_endpoint
+neutron::server::notifications::auth_uri: *keystone_public_endpoint
+neutron::server::notifications::identity_uri: *keystone_admin_endpoint
+ceilometer::api::keystone_auth_uri: *keystone_public_endpoint
+ceilometer::api::keystone_identity_uri: *keystone_admin_endpoint
+cinder::api::auth_uri: *keystone_public_endpoint
+cinder::api::identity_uri: *keystone_admin_endpoint
+glance::api::auth_uri: *keystone_public_endpoint
+glance::api::identity_uri: *keystone_admin_endpoint
+glance::registry::auth_uri: *keystone_public_endpoint
+glance::registry::identity_uri: *keystone_admin_endpoint
+ironic::api::auth_uri: *keystone_public_endpoint
+ironic::api::identity_uri: *keystone_admin_endpoint
+neutron::server::identity_uri: *keystone_admin_endpoint
+swift::proxy::authtoken::auth_uri: *keystone_public_endpoint
+swift::proxy::authtoken::identity_uri: *keystone_admin_endpoint
 
 # Nova stuff
 nova::os_region_name: *region_name
@@ -226,7 +230,6 @@ nova::compute::libvirt::vncserver_listen: '0.0.0.0'
 nova::glance_api_servers: *glance_url
 nova::network::neutron::neutron_region_name: "%{hiera('region_name')}"
 nova::network::neutron::neutron_admin_password: *service_user_pass
-nova::network::neutron::neutron_admin_auth_url: "%{hiera('keystone::admin_endpoint')}/v2.0"
 nova::network::neutron::neutron_url: "http://%{hiera('control_node')}:9696"
 
 # Rabbit
