Move openrc files to /etc

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -410,12 +410,12 @@ deployments::profile::users::roles:
  - 'SwiftOperator'
 deployments::profile::openrcs::openrcs:
   "%{hiera('admin_user')}":
-     "path": "/root/openrc.%{hiera('admin_user')}"
+     "path": "/etc/openrc.%{hiera('admin_user')}"
      "tenant": "%{hiera('admin_tenant')}"
      "user": "%{hiera('admin_user')}"
      "password": "%{hiera('admin_password')}"
   "%{hiera('deployments::profile::users::username')}":
-     "path": "/root/openrc.%{hiera('deployments::profile::users::username')}"
+     "path": "/etc/openrc.%{hiera('deployments::profile::users::username')}"
      "tenant": "%{hiera('deployments::profile::users::project')}"
      "user": "%{hiera('deployments::profile::users::username')}"
      "password": "%{hiera('deployments::profile::users::password')}"
