--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -105,6 +105,7 @@ neutron::server::notifications::password: *service_user_pass
 neutron::agents::metadata::auth_password: *service_user_pass
 
 # Database stuff
+mysql::server::root_password: *db_pass
 glance::registry::database_connection: &glance_db_connection "mysql://%{hiera('glance::db::mysql::user')}:%{hiera('glance::db::mysql::password')}@127.0.0.1/glance"
 glance::api::database_connection: *glance_db_connection
 glance::db::mysql::user: "glance"
