--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -252,7 +252,8 @@ swift::proxy::authtoken::identity_uri: *keystone_admin_endpoint
 nova::os_region_name: *region_name
 nova::api::resume_guests_state_on_host_boot: true
 nova::api::service_neutron_metadata_proxy: true
-nova::vncproxy::host: "%{hiera('control_node')}"
+nova::vncproxy::host: *control_node
+nova::compute::vncproxy_host: *control_node
 nova::api::enabled: true
 nova::cert::enabled: true
 nova::compute::enabled: true
