--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -321,6 +321,9 @@ horizon::api_versions:
 horizon::compress_offline: false
 apache::default_vhost: false
 horizon::django_session_engine: 'django.contrib.sessions.backends.cache'
+horizon::cache_backend: 'django.core.cache.backends.memcached.MemcachedCache'
+horizon::cache_server_ip: *control_node
+horizon::cache_server_port: 11211
 
 # Keystone
 keystone::wsgi::apache::ssl: false
