--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -351,6 +351,8 @@ neutron::agents::ml2::ovs::tunnel_types:
  - 'vxlan'
 neutron::service_plugins:
  - 'router'
+
+tenant_for_router: &tenant_for_router 'test_project'
 neutron_network:
   Network1:
     shared: true
@@ -366,11 +368,11 @@ neutron_network:
 neutron_router:
   Router1:
     admin_state_up: true
-    tenant_name: 'test_project'
+    tenant_name: *tenant_for_router
     gateway_network_name: 'ext-net'
     ensure: present
 neutron_router_interface:
-  Router1:ext-subnet:
+  Router1:Subnet1:
     ensure: present
 
 neutron::server::notifications::os_region_name: *region_name
