first try at mitaka

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -63,7 +63,7 @@ neutron_subnet:
 deployments::profile::glance::cirros_version: "0.3.4"
 
 # Which release of OpenStack to install
-deployments::profile::uca::release: "liberty"
+deployments::profile::uca::release: "mitaka"
 
 # Set to true to enable debug mode!
 debug: &debug "false"
