Set MTU related settings
Set MTU values in nova, neutron, and dnsmasq.

note: dnsmasq.conf changes require a commit from puppet-deployments repo.

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -355,6 +355,13 @@ neutron::agents::ml2::ovs::tunnel_types:
 neutron::service_plugins:
  - 'router'
 
+# MTU settings for nova, neutron, and dnsmasq
+mtu: &mtu '1450'
+neutron::network_device_mtu: *mtu
+nova::compute::network_device_mtu: *mtu
+neutron::agents::dhcp::dnsmasq_config_file: '/etc/neutron/dnsmasq.conf'
+dnsmasq_conf_contents: "dhcp-option-force=26,%{hiera('mtu')}"
+
 tenant_for_router: &tenant_for_router 'test_project'
 neutron_network:
   Network1:
