Add 3 swift devices
Mitaka swift requires 3 devices since we have a replica count
of 3. This was likely always an issue but now throws an error.

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -440,6 +440,9 @@ swift_ring_object_devices:
   '127.0.0.1:6000/2':
     'zone': 1
     'weight': 1
+  '127.0.0.1:6000/3':
+    'zone': 1
+    'weight': 1
 swift_ring_container_devices:
   '127.0.0.1:6001/1':
     'zone': 1
@@ -447,11 +450,17 @@ swift_ring_container_devices:
   '127.0.0.1:6001/2':
     'zone': 1
     'weight': 1
+  '127.0.0.1:6001/3':
+    'zone': 1
+    'weight': 1
 swift_ring_account_devices:
   '127.0.0.1:6002/1':
     'zone': 1
     'weight': 1
   '127.0.0.1:6002/2':
+    'zone': 1
+    'weight': 1
+  '127.0.0.1:6002/3':
     'zone': 1
     'weight': 1
 
