add cinder-volumes to hiera
So we can use it in upstart job

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -349,6 +349,7 @@ keystone::service_name: 'httpd'
 cinder::setup_test_volume::size: 10G
 cinder::setup_test_volume::volume_path: '/var/lib/cinder/volumes'
 cinder::setup_test_volume::loopback_device: '/dev/loop2'
+cinder::setup_test_volume::volume_name: 'cinder-volumes'
 
 # Neutron
 neutron::allow_overlapping_ips: true
