--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -420,7 +420,7 @@ ceilometer::agent::auth::auth_url: *keystone_public_endpoint
 swift::keystone::auth::configure_endpoint: true
 swift::keystone::auth::configure_s3_endpoint: false
 swift::swift_hash_suffix: 'secret_hash'
-swift::storage: '127.0.0.1'
+swift::storage: *control_node
 swift::proxy::pipeline:
  - 'catch_errors'
  - 'healthcheck'
@@ -444,8 +444,8 @@ swift::keystone::auth::operator_roles:
  - 'SwiftOperator'
  - 'ResellerAdmin'
 swift::proxy::keystone::reseller_prefix: 'KEY_'
-swift::proxy::proxy_local_net_ip: '127.0.0.1'
-swift::storage::all::storage_local_net_ip: '127.0.0.1'
+swift::proxy::proxy_local_net_ip: *control_node
+swift::storage::all::storage_local_net_ip: *control_node
 swift::storage::all::incoming_chmod: 'Du=rwx,g=rx,o=rx,Fu=rw,g=r,o=r'
 swift::storage::all::outcoming_chmod: 'Du=rwx,g=rx,o=rx,Fu=rw,g=r,o=r'
 # size will be seek * byte_size or 256M per device
@@ -460,33 +460,33 @@ swift_loopback_devices:
     'byte_size': '1024'
     'seek': '256K'
 swift_ring_object_devices:
-  '127.0.0.1:6000/1':
+  '%{hiera("control_node")}:6000/1':
     'zone': 1
     'weight': 1
-  '127.0.0.1:6000/2':
+  '%{hiera("control_node")}:6000/2':
     'zone': 1
     'weight': 1
-  '127.0.0.1:6000/3':
+  '%{hiera("control_node")}:6000/3':
     'zone': 1
     'weight': 1
 swift_ring_container_devices:
-  '127.0.0.1:6001/1':
+  '%{hiera("control_node")}:6001/1':
     'zone': 1
     'weight': 1
-  '127.0.0.1:6001/2':
+  '%{hiera("control_node")}:6001/2':
     'zone': 1
     'weight': 1
-  '127.0.0.1:6001/3':
+  '%{hiera("control_node")}:6001/3':
     'zone': 1
     'weight': 1
 swift_ring_account_devices:
-  '127.0.0.1:6002/1':
+  '%{hiera("control_node")}:6002/1':
     'zone': 1
     'weight': 1
-  '127.0.0.1:6002/2':
+  '%{hiera("control_node")}:6002/2':
     'zone': 1
     'weight': 1
-  '127.0.0.1:6002/3':
+  '%{hiera("control_node")}:6002/3':
     'zone': 1
     'weight': 1
 
