--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -6,11 +6,11 @@ this_node: &this_node "%{::ipaddress}"
 
 # Edit the following line to set the IP address of your Control node.
 # This is the node where the API services, mysql, and RabbitMQ run.
-control_node: &control_node '127.0.0.1'
+control_node: &control_node '71.74.181.27'
 
 # Edit the following line to set the IP address of your Compute node.
 # This is the node where VMs run.
-compute_node: &compute_node '127.0.0.1'
+compute_node: &compute_node '71.74.181.252'
 
 # Edit the following line to set a test user password
 deployments::profile::users::password: "test"
@@ -414,7 +414,7 @@ ceilometer::metering_secret: "ceilometer_secret"
 ceilometer::api::enabled: true
 ceilometer::agent::auth::auth_password: *service_user_pass
 ceilometer::agent::auth::auth_region: *region_name
-ceilometer::agent::auth::auth_url: *keystone_public_endpoint
+ceilometer::agent::auth::auth_url: "%{hiera('keystone::public_endpoint')}/v3"
 
 # Swift
 swift::keystone::auth::configure_endpoint: true
