Don't use Ceilometer IPMI polling
We don't have a bare metal component of our deployments, make the ipmi namespace false for the Ceilometer polling agent (it's true by default).

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -415,6 +415,7 @@ ceilometer::api::enabled: true
 ceilometer::agent::auth::auth_password: *service_user_pass
 ceilometer::agent::auth::auth_region: *region_name
 ceilometer::agent::auth::auth_url: *keystone_public_endpoint
+ceilometer::agent::polling::ipmi_namespace: false
 
 # Swift
 swift::keystone::auth::configure_endpoint: true
